# usafi_kafundi

./: CMakeLists.txt  README.md  main.cpp
certs/: openssl.cnf  server-cert.pem  server-key.pem
frontend/: index.html  show.html  styles.css  user.css  users.html
src/: main.cpp  start.cpp
src/Controllers/: CategoryController.hpp  Controller.hpp  HomeController.hpp  ProductController.hpp  UserController.hpp  Validator.hpp
src/category/: Category.cpp  Category.hpp  CategoryRepository.cpp  CategoryRepository.hpp  CategoryValidator.cpp  CategoryValidator.hpp  ICategoryRepository.hpp
src/config/: Config.cpp  Config.hpp  RouteConfigurator.cpp  RouteConfigurator.hpp  config.json
src/kernel/: DynamicRequestHandler.cpp  DynamicRequestHandler.hpp  HTTPServer.cpp  HTTPServer.hpp  IRequestHandler.hpp  RequestHandler.hpp  Response.cpp  Response.hpp  RouteManager.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp  SimpleRequestHandler.cpp  SimpleRequestHandler.hpp  ThreadPool.cpp  ThreadPool.hpp  UserRoutes.hpp  setup_routes.hpp
src/user/: Company.hpp  CompanyValidator.hpp  Email.hpp  EmailValidator.hpp  IUserRepository.hpp  Location.hpp  LocationValidator.hpp  Password.hpp  PasswordValidator.hpp  Phone.hpp  PhoneValidator.hpp  User.cpp  User.hpp  UserRepository.cpp  UserRepository.hpp  UserService.hpp  user.sql
src/utils/: Stack.hpp  UnorderedMap.hpp  prog  test_stack.cpp  test_unorderedMap.cpp
tests/: CMakeLists.txt
